--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   </h1>
   <ul>
    <li>
+    <a href="https://www.youtube.com/watch?v=jqjf3w80PXs">
+     [Kouryu] Un remaster qui ne manque pas de rythme - Patapon 1+2 Replay, avis
+    </a>
+   </li>
+   <li>
     <a href="https://www.youtube.com/watch?v=xIE3wkM3io8">
      [小宵こなん] [Close-up] Koyoi Konan's first visit to Macau🛩️ A close-up look behind the scenes at the Macau ev...
     </a>
