--- a/index.html
+++ b/index.html
@@ -1,4 +1,43 @@
 <html>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f9f9f9;
+    color: #333;
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 0 20px;
+  }
+  h1 {
+    text-align: center;
+    color: #222;
+    margin-bottom: 30px;
+  }
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  li {
+    background: #fff;
+    margin-bottom: 15px;
+    padding: 15px 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    transition: box-shadow 0.3s ease;
+  }
+  li:hover {
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  }
+  a {
+    text-decoration: none;
+    color: #0066cc;
+    font-weight: 600;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
+
  <body>
   <h1>
    Latest Videos
