--- a/index.html
+++ b/index.html
@@ -1,74 +1,51 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Latest YouTube Videos</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #222;
-      margin-bottom: 30px;
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    li {
-      background: #fff;
-      margin-bottom: 15px;
-      padding: 15px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      transition: box-shadow 0.3s ease;
-    }
-    li:hover {
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-    a {
-      text-decoration: none;
-      color: #0066cc;
-      font-weight: 600;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Latest YouTube Videos</title>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 0 1rem;
+    background: #f9f9f9;
+    color: #222;
+}
+h1 {
+    text-align: center;
+    color: #444;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+li {
+    background: #fff;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+a {
+    text-decoration: none;
+    color: #0073e6;
+    font-weight: bold;
+}
+a:hover {
+    text-decoration: underline;
+}
+.timestamp {
+    color: #666;
+    font-size: 0.9rem;
+    margin-top: 0.3rem;
+}
+</style>
 </head>
 <body>
-
-  <h1>
-   Latest Videos
-  </h1>
-  <ul>
-   <li>
-    <a href="https://www.youtube.com/watch?v=jqjf3w80PXs">
-     [Kouryu] Un remaster qui ne manque pas de rythme - Patapon 1+2 Replay, avis
-    </a>
-   </li>
-   <li>
-    <a href="https://www.youtube.com/watch?v=xIE3wkM3io8">
-     [小宵こなん] [Close-up] Koyoi Konan's first visit to Macau🛩️ A close-up look behind the scenes at the Macau ev...
-    </a>
-   </li>
-   <li>
-    <a href="https://www.youtube.com/watch?v=CQpCd2CrVzQ">
-     [Figure Brush Painting Channel 【MAman】] [7 days left until WF] This time's TSUNOID is a little different...!? We'll be painting it with t...
-    </a>
-   </li>
-   <li>
-    <a href="https://www.youtube.com/watch?v=DbHbG4RAhRk">
-     [えなこ] 【大感謝】誕生日プレゼント開封会
-    </a>
-   </li>
-  </ul>
- </body>
+<h1>Latest Videos</h1>
+<ul><li><a href="https://www.youtube.com/watch?v=jqjf3w80PXs">[Kouryu] Un remaster qui ne manque pas de rythme - Patapon 1+2 Replay, avis</a><div class="timestamp">Published: 2025-07-28 13:45:28</div></li><li><a href="https://www.youtube.com/watch?v=xIE3wkM3io8">[小宵こなん] [Close-up] Koyoi Konan's first visit to Macau🛩️ A close-up look behind the scenes at the Macau ev...</a><div class="timestamp">Published: 2025-07-28 13:43:28</div></li><li><a href="https://www.youtube.com/watch?v=CQpCd2CrVzQ">[Figure Brush Painting Channel 【MAman】] [7 days left until WF] This time's TSUNOID is a little different...!? We'll be painting it with t...</a><div class="timestamp">Published: 2025-07-28 13:43:27</div></li><li><a href="https://www.youtube.com/watch?v=DbHbG4RAhRk">[えなこ] 【大感謝】誕生日プレゼント開封会</a><div class="timestamp">Published: 2025-07-28 13:43:26</div></li><li><a href="https://www.youtube.com/watch?v=8UXobyyRu10">[Ici Japon Corp.] On teste la street food au marché de Wuhan</a><div class="timestamp">Published: 2025-07-28 12:18:26</div></li></ul>
+</body>
 </html>
