Added 1 new video(s) from channel(s): Sir Gisby

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-<h1>Latest Videos<span class="last-checked">(Last checked: 2025-08-28 17:39:38)</span></h1>
-<ul></ul>
+<h1>Latest Videos<span class="last-checked">(Last checked: 2025-08-28 17:46:17)</span></h1>
+<ul><li><a href="https://www.youtube.com/watch?v=O5RjW4IAl5g"><span class="channel-name">[Sir Gisby]</span><span class="video-duration">(15:16)</span><span class="video-title"> Cet Homme A Ruiné Des Vies (Et Des Milliards) Par Ego</span></a><div class="timestamp">Published: 2025-08-28 17:45:41</div></li></ul>
 </body>
 </html>
